force-app/main/default/objects/Subscribed_Student_Association__c.object
<CustomObject>
    <description>Deprecation candatite. Object not populated. 

CampusM (my.monash) may reference it.</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>My Student Associations</relationshipLabel>
        <relationshipName>My_Student_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_URL__c</fullName>
        <formula>&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Association_Name__c</fullName>
        <formula>&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Association Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Association__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student Association</label>
        <referenceTo>Student_Association__c</referenceTo>
        <relationshipLabel>My Student Associations</relationshipLabel>
        <relationshipName>My_Student_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscribed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subscribed</label>
        <type>Checkbox</type>
    </fields>
    <label>My Student Association</label>
    <nameField>
        <displayFormat>ASSOC-{00000}</displayFormat>
        <label>Association Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>My Student Associations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>